--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
     </style>
   </head>
   <body>
+    <div class="header">
+      <figure class="header-imageWrapper">
+        <img src="./images/logo.svg" alt="Huddle Logo" class="header-image" />
+      </figure>
+      <form class="header-form">
+        <button class="form-button">Try It Free</button>
+      </form>
+    </div>
+
     <footer>
       <p class="attribution">
         Challenge by
