--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
     <link rel="stylesheet" href="./css/estilos.css" />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Frontend Mentor | Huddle landing page with curved sections</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -33,10 +38,38 @@
         <img src="./images/logo.svg" alt="Huddle Logo" class="header-image" />
       </figure>
       <form class="header-form">
-        <button class="form-button">Try It Free</button>
+        <button class="header-button">Try It Free</button>
       </form>
     </div>
 
+    <div class="hero">
+      <h1 class="hero-title">Build the community your fans will love</h1>
+      <p class="hero-description">
+        Huddle re-iamgines the way we build communities. You have a<br />voice,
+        but so does your audience. Create connections with your<br />users as
+        you engage in genuine discussion.
+      </p>
+      <form class="hero-form">
+        <button class="form-button">Get started for free</button>
+      </form>
+      <figure class="hero-imageWrapper">
+        <img
+          src="./images/screen-mockups.svg"
+          alt="Mockups"
+          class="hero-image"
+        />
+      </figure>
+      <div class="hero-numbers">
+        <div class="communities">
+          <h2 class="hero-numbers-title">1.4K+</h2>
+          <p class="hero-numbers-description">Communities Formed</p>
+        </div>
+        <div class="messages">
+          <h2 class="hero-numbers-title">2.7m+</h2>
+          <p class="hero-numbers-description">Messages Sent</p>
+        </div>
+      </div>
+    </div>
     <footer>
       <p class="attribution">
         Challenge by
