Agregada la primera seccion del Contenido 1

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button class="header-button">Try It Free</button>
       </form>
     </div>
-
+    <!-- ----------------------- Hero ------------------------------------>
     <div class="hero">
       <h1 class="hero-title">Build the community your fans will love</h1>
       <p class="hero-description">
@@ -70,6 +70,24 @@
         </div>
       </div>
     </div>
+    <!-- ----------------------- Content-1 ------------------------------------>
+    <section class="content1">
+      <div class="content1Wrapper">
+        <h2 class="content1-title">Grow together</h2>
+        <p class="content1-description">
+          Generate meaninful discussions with your audience and build a<br />strong,
+          loyal community. Think of the insighful conversations you<br />miss
+          out on with a fedback form.
+        </p>
+      </div>
+      <figure class="content1-imageWrapper">
+        <img
+          src="./images/illustration-grow-together.svg"
+          alt="Grow Together"
+          class="content1-image"
+        />
+      </figure>
+    </section>
     <footer>
       <p class="attribution">
         Challenge by
