Contenidos agregados sin el background

--- a/index.html
+++ b/index.html
@@ -71,23 +71,60 @@
       </div>
     </div>
     <!-- ----------------------- Content-1 ------------------------------------>
-    <section class="content1">
-      <div class="content1Wrapper">
-        <h2 class="content1-title">Grow together</h2>
-        <p class="content1-description">
+    <section class="content">
+      <div class="contentWrapper">
+        <h2 class="content-title">Grow together</h2>
+        <p class="content-description">
           Generate meaninful discussions with your audience and build a<br />strong,
           loyal community. Think of the insighful conversations you<br />miss
           out on with a fedback form.
         </p>
       </div>
-      <figure class="content1-imageWrapper">
+      <figure class="content-imageWrapper">
         <img
           src="./images/illustration-grow-together.svg"
           alt="Grow Together"
-          class="content1-image"
+          class="content-image"
         />
       </figure>
     </section>
+    <!-- ----------------------- Content-2 ------------------------------------>
+    <section class="content">
+      <figure class="content-imageWrapper">
+        <img
+          src="./images/illustration-your-users.svg"
+          alt="Grow Together"
+          class="content-image"
+        />
+      </figure>
+      <div class="contentWrapper">
+        <h2 class="content-title">Flowing Conversations</h2>
+        <p class="content-description">
+          You wouldn´t paginate a conversation in real life, so why do it
+          online?<br />Our threads have just-in-time loading for a more natural
+          flow.
+        </p>
+      </div>
+    </section>
+    <!-- ----------------------- Content-3 ------------------------------------>
+    <section class="content">
+      <div class="contentWrapper">
+        <h2 class="content-title">Your Users</h2>
+        <p class="content-description">
+          It takes no time at all to integrate Huddle with your app's<br />authentication
+          solution. This means, once signed in to your app, your<br />users can
+          start chatting immediately.
+        </p>
+      </div>
+      <figure class="content-imageWrapper">
+        <img
+          src="./images/illustration-flowing-conversation.svg"
+          alt="Grow Together"
+          class="content-image"
+        />
+      </figure>
+    </section>
+    <!-- ----------------------- Footer ------------------------------------>
     <footer>
       <p class="attribution">
         Challenge by
