--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
         />
       </figure>
     </section>
+    <!-- ----------------------- Section 2 ------------------------------------>
+    <section class="section2">
+      <h2 class="section2-title">Ready to build your community?</h2>
+      <form class="section2-form">
+        <button class="form-button">Get started for free</button>
+      </form>
+    </section>
+
     <!-- ----------------------- Footer ------------------------------------>
     <footer>
       <p class="attribution">
